sfdc-ac-transition-pkg/force-app/main/default/objects/System_Log_Event__e/System_Log_Event__e.object-meta.xml
<CustomObject>
    <label>System Log Event</label>
    <pluralLabel>System Log Events</pluralLabel>
</CustomObject>