sfdc-ac-transition-pkg/force-app/main/default/objects/System_Log_Event__e/fields/Flow_Log_Event__c.field-meta.xml
<CustomField>
    <fullName>Flow_Log_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flow Log Event</label>
    <type>Checkbox</type>
</CustomField>