sfdc-ac-transition-pkg/force-app/main/default/objects/System_Log_Event__e/fields/Flow_Stage__c.field-meta.xml
<CustomField>
    <fullName>Flow_Stage__c</fullName>
    <label>Flow Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>