sfdc-ac-transition-pkg/force-app/main/default/objects/System_Log_Event__e/fields/Log_Level__c.field-meta.xml
<CustomField>
    <fullName>Log_Level__c</fullName>
    <label>Log Level</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>