sfdc-ac-transition-pkg/force-app/main/default/objects/System_Log_Event__e/fields/Related_Object_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Object_Id__c</fullName>
    <label>Related Object Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>