sfdc-ac-transition-pkg/force-app/main/default/objects/System_Log_Event__e/fields/Running_UserId__c.field-meta.xml
<CustomField>
    <fullName>Running_UserId__c</fullName>
    <label>Running UserId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>