sfdc-ac-transition-pkg/force-app/main/default/objects/System_Log_Event__e/fields/Running_UserName__c.field-meta.xml
<CustomField>
    <fullName>Running_UserName__c</fullName>
    <label>Running UserName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>