sfdc-ac-transition-pkg/force-app/main/default/objects/System_Log_Event__e/fields/Script_Name__c.field-meta.xml
<CustomField>
    <fullName>Script_Name__c</fullName>
    <label>Script Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>